syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message GetDeedOfOwnershipDocumentRequest {
    int32 DeedOfOwnershipDocumentId = 1;
}
